--- a/crud-app/package.json
+++ b/crud-app/package.json
@@ -23,7 +23,7 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "json-server": "json-server --watch src/Database/db.json --host 127.0.0.1 --port 3002",
     "dev": "concurrently \"npm start\" \"npm run json-server\"",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",    
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
